safeguard.output
State 37 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: item_list

    2 item_list: ε
    3          | item_list top_level_item

    4 top_level_item: function_definition
    5               | statement

    6 statement_list: ε
    7               | statement_list statement

    8 statement: var_declaration
    9          | expression_statement
   10          | if_statement
   11          | loop_statement
   12          | return_statement
   13          | block_statement
   14          | SEMICOLON

   15 block_statement: LBRACE statement_list RBRACE

   16 var_declaration: LET IDENTIFIER COLON type_specifier optional_initializer SEMICOLON

   17 optional_initializer: ε
   18                     | ASSIGN expression

   19 type_specifier: NUMBER_TYPE
   20               | TEXT_TYPE LBRACKET NUMBER_LITERAL RBRACKET
   21               | ARRAY_TYPE LBRACKET NUMBER_LITERAL RBRACKET OF NUMBER_TYPE

   22 expression_statement: expression SEMICOLON

   23 if_statement: IF LPAREN expression RPAREN statement
   24             | IF LPAREN expression RPAREN statement ELSE statement

   25 loop_statement: LOOP WHILE LPAREN expression RPAREN statement

   26 return_statement: RETURN expression SEMICOLON
   27                 | RETURN SEMICOLON

   28 expression: assignment_expression

   29 assignment_expression: equality_expression
   30                      | lvalue ASSIGN assignment_expression

   31 equality_expression: relational_expression
   32                    | equality_expression EQUAL_EQUAL relational_expression
   33                    | equality_expression BANG_EQUAL relational_expression

   34 relational_expression: additive_expression
   35                      | relational_expression LESS additive_expression
   36                      | relational_expression GREATER additive_expression
   37                      | relational_expression LESS_EQUAL additive_expression
   38                      | relational_expression GREATER_EQUAL additive_expression

   39 additive_expression: multiplicative_expression
   40                    | additive_expression PLUS multiplicative_expression
   41                    | additive_expression MINUS multiplicative_expression

   42 multiplicative_expression: unary_expression
   43                          | multiplicative_expression STAR unary_expression
   44                          | multiplicative_expression SLASH unary_expression
   45                          | multiplicative_expression PERCENT unary_expression

   46 unary_expression: postfix_expression
   47                 | MINUS unary_expression

   48 postfix_expression: primary_expression
   49                   | postfix_expression LBRACKET expression RBRACKET
   50                   | postfix_expression LPAREN argument_expression_list_opt RPAREN
   51                   | PRINT_NUMBER_FN LPAREN expression RPAREN
   52                   | PRINT_TEXT_FN LPAREN expression RPAREN

   53 argument_expression_list_opt: ε
   54                             | argument_expression_list

   55 argument_expression_list: assignment_expression
   56                         | argument_expression_list ',' assignment_expression

   57 primary_expression: lvalue
   58                   | NUMBER_LITERAL
   59                   | STRING_LITERAL
   60                   | LPAREN expression RPAREN
   61                   | READ_NUMBER_FN LPAREN RPAREN
   62                   | SIZE_OF LPAREN IDENTIFIER RPAREN

   63 lvalue: IDENTIFIER
   64       | lvalue LBRACKET expression RBRACKET

   65 function_definition: DEFINE IDENTIFIER LPAREN RPAREN RETURNS type_specifier block_statement


Terminals, with rules where they appear

    $end (0) 0
    ',' (44) 56
    error (256)
    IDENTIFIER <str_val> (258) 16 62 63 65
    STRING_LITERAL <str_val> (259) 59
    NUMBER_LITERAL <int_val> (260) 20 21 58
    LET (261) 16
    NUMBER_TYPE (262) 19 21
    ARRAY_TYPE (263) 21
    TEXT_TYPE (264) 20
    OF (265) 21
    IF (266) 23 24
    LOOP (267) 25
    WHILE (268) 25
    DEFINE (269) 65
    RETURNS (270) 65
    RETURN (271) 26 27
    READ_NUMBER_FN (272) 61
    PRINT_NUMBER_FN (273) 51
    PRINT_TEXT_FN (274) 52
    SIZE_OF (275) 62
    PLUS (276) 40
    MINUS (277) 41 47
    STAR (278) 43
    SLASH (279) 44
    PERCENT (280) 45
    ASSIGN (281) 18 30
    SEMICOLON (282) 14 16 22 26 27
    EQUAL_EQUAL (283) 32
    BANG_EQUAL (284) 33
    LESS (285) 35
    LESS_EQUAL (286) 37
    GREATER (287) 36
    GREATER_EQUAL (288) 38
    LPAREN (289) 23 24 25 50 51 52 60 61 62 65
    RPAREN (290) 23 24 25 50 51 52 60 61 62 65
    LBRACE (291) 15
    RBRACE (292) 15
    LBRACKET (293) 20 21 49 64
    RBRACKET (294) 20 21 49 64
    COLON (295) 16
    ELSE (296) 24
    UMINUS (297)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    program (45)
        on left: 1
        on right: 0
    item_list (46)
        on left: 2 3
        on right: 1 3
    top_level_item (47)
        on left: 4 5
        on right: 3
    statement_list (48)
        on left: 6 7
        on right: 7 15
    statement (49)
        on left: 8 9 10 11 12 13 14
        on right: 5 7 23 24 25
    block_statement (50)
        on left: 15
        on right: 13 65
    var_declaration (51)
        on left: 16
        on right: 8
    optional_initializer (52)
        on left: 17 18
        on right: 16
    type_specifier (53)
        on left: 19 20 21
        on right: 16 65
    expression_statement (54)
        on left: 22
        on right: 9
    if_statement (55)
        on left: 23 24
        on right: 10
    loop_statement (56)
        on left: 25
        on right: 11
    return_statement (57)
        on left: 26 27
        on right: 12
    expression (58)
        on left: 28
        on right: 18 22 23 24 25 26 49 51 52 60 64
    assignment_expression (59)
        on left: 29 30
        on right: 28 30 55 56
    equality_expression (60)
        on left: 31 32 33
        on right: 29 32 33
    relational_expression (61)
        on left: 34 35 36 37 38
        on right: 31 32 33 35 36 37 38
    additive_expression (62)
        on left: 39 40 41
        on right: 34 35 36 37 38 40 41
    multiplicative_expression (63)
        on left: 42 43 44 45
        on right: 39 40 41 43 44 45
    unary_expression (64)
        on left: 46 47
        on right: 42 43 44 45 47
    postfix_expression (65)
        on left: 48 49 50 51 52
        on right: 46 49 50
    argument_expression_list_opt (66)
        on left: 53 54
        on right: 50
    argument_expression_list (67)
        on left: 55 56
        on right: 54 56
    primary_expression (68)
        on left: 57 58 59 60 61 62
        on right: 48
    lvalue (69)
        on left: 63 64
        on right: 30 57 64
    function_definition (70)
        on left: 65
        on right: 4


State 0

    0 $accept: • program $end
    1 program: • item_list
    2 item_list: ε •
    3          | • item_list top_level_item

    $default  reduce using rule 2 (item_list)

    program    go to state 1
    item_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: item_list •  [$end]
    3 item_list: item_list • top_level_item
    4 top_level_item: • function_definition
    5               | • statement
    8 statement: • var_declaration
    9          | • expression_statement
   10          | • if_statement
   11          | • loop_statement
   12          | • return_statement
   13          | • block_statement
   14          | • SEMICOLON
   15 block_statement: • LBRACE statement_list RBRACE
   16 var_declaration: • LET IDENTIFIER COLON type_specifier optional_initializer SEMICOLON
   22 expression_statement: • expression SEMICOLON
   23 if_statement: • IF LPAREN expression RPAREN statement
   24             | • IF LPAREN expression RPAREN statement ELSE statement
   25 loop_statement: • LOOP WHILE LPAREN expression RPAREN statement
   26 return_statement: • RETURN expression SEMICOLON
   27                 | • RETURN SEMICOLON
   28 expression: • assignment_expression
   29 assignment_expression: • equality_expression
   30                      | • lvalue ASSIGN assignment_expression
   31 equality_expression: • relational_expression
   32                    | • equality_expression EQUAL_EQUAL relational_expression
   33                    | • equality_expression BANG_EQUAL relational_expression
   34 relational_expression: • additive_expression
   35                      | • relational_expression LESS additive_expression
   36                      | • relational_expression GREATER additive_expression
   37                      | • relational_expression LESS_EQUAL additive_expression
   38                      | • relational_expression GREATER_EQUAL additive_expression
   39 additive_expression: • multiplicative_expression
   40                    | • additive_expression PLUS multiplicative_expression
   41                    | • additive_expression MINUS multiplicative_expression
   42 multiplicative_expression: • unary_expression
   43                          | • multiplicative_expression STAR unary_expression
   44                          | • multiplicative_expression SLASH unary_expression
   45                          | • multiplicative_expression PERCENT unary_expression
   46 unary_expression: • postfix_expression
   47                 | • MINUS unary_expression
   48 postfix_expression: • primary_expression
   49                   | • postfix_expression LBRACKET expression RBRACKET
   50                   | • postfix_expression LPAREN argument_expression_list_opt RPAREN
   51                   | • PRINT_NUMBER_FN LPAREN expression RPAREN
   52                   | • PRINT_TEXT_FN LPAREN expression RPAREN
   57 primary_expression: • lvalue
   58                   | • NUMBER_LITERAL
   59                   | • STRING_LITERAL
   60                   | • LPAREN expression RPAREN
   61                   | • READ_NUMBER_FN LPAREN RPAREN
   62                   | • SIZE_OF LPAREN IDENTIFIER RPAREN
   63 lvalue: • IDENTIFIER
   64       | • lvalue LBRACKET expression RBRACKET
   65 function_definition: • DEFINE IDENTIFIER LPAREN RPAREN RETURNS type_specifier block_statement

    IDENTIFIER       shift, and go to state 4
    STRING_LITERAL   shift, and go to state 5
    NUMBER_LITERAL   shift, and go to state 6
    LET              shift, and go to state 7
    IF               shift, and go to state 8
    LOOP             shift, and go to state 9
    DEFINE           shift, and go to state 10
    RETURN           shift, and go to state 11
    READ_NUMBER_FN   shift, and go to state 12
    PRINT_NUMBER_FN  shift, and go to state 13
    PRINT_TEXT_FN    shift, and go to state 14
    SIZE_OF          shift, and go to state 15
    MINUS            shift, and go to state 16
    SEMICOLON        shift, and go to state 17
    LPAREN           shift, and go to state 18
    LBRACE           shift, and go to state 19

    $default  reduce using rule 1 (program)

    top_level_item             go to state 20
    statement                  go to state 21
    block_statement            go to state 22
    var_declaration            go to state 23
    expression_statement       go to state 24
    if_statement               go to state 25
    loop_statement             go to state 26
    return_statement           go to state 27
    expression                 go to state 28
    assignment_expression      go to state 29
    equality_expression        go to state 30
    relational_expression      go to state 31
    additive_expression        go to state 32
    multiplicative_expression  go to state 33
    unary_expression           go to state 34
    postfix_expression         go to state 35
    primary_expression         go to state 36
    lvalue                     go to state 37
    function_definition        go to state 38


State 3

    0 $accept: program $end •

    $default  accept


State 4

   63 lvalue: IDENTIFIER •

    $default  reduce using rule 63 (lvalue)


State 5

   59 primary_expression: STRING_LITERAL •

    $default  reduce using rule 59 (primary_expression)


State 6

   58 primary_expression: NUMBER_LITERAL •

    $default  reduce using rule 58 (primary_expression)


State 7

   16 var_declaration: LET • IDENTIFIER COLON type_specifier optional_initializer SEMICOLON

    IDENTIFIER  shift, and go to state 39


State 8

   23 if_statement: IF • LPAREN expression RPAREN statement
   24             | IF • LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 40


State 9

   25 loop_statement: LOOP • WHILE LPAREN expression RPAREN statement

    WHILE  shift, and go to state 41


State 10

   65 function_definition: DEFINE • IDENTIFIER LPAREN RPAREN RETURNS type_specifier block_statement

    IDENTIFIER  shift, and go to state 42


State 11

   26 return_statement: RETURN • expression SEMICOLON
   27                 | RETURN • SEMICOLON
   28 expression: • assignment_expression
   29 assignment_expression: • equality_expression
   30                      | • lvalue ASSIGN assignment_expression
   31 equality_expression: • relational_expression
   32                    | • equality_expression EQUAL_EQUAL relational_expression
   33                    | • equality_expression BANG_EQUAL relational_expression
   34 relational_expression: • additive_expression
   35                      | • relational_expression LESS additive_expression
   36                      | • relational_expression GREATER additive_expression
   37                      | • relational_expression LESS_EQUAL additive_expression
   38                      | • relational_expression GREATER_EQUAL additive_expression
   39 additive_expression: • multiplicative_expression
   40                    | • additive_expression PLUS multiplicative_expression
   41                    | • additive_expression MINUS multiplicative_expression
   42 multiplicative_expression: • unary_expression
   43                          | • multiplicative_expression STAR unary_expression
   44                          | • multiplicative_expression SLASH unary_expression
   45                          | • multiplicative_expression PERCENT unary_expression
   46 unary_expression: • postfix_expression
   47                 | • MINUS unary_expression
   48 postfix_expression: • primary_expression
   49                   | • postfix_expression LBRACKET expression RBRACKET
   50                   | • postfix_expression LPAREN argument_expression_list_opt RPAREN
   51                   | • PRINT_NUMBER_FN LPAREN expression RPAREN
   52                   | • PRINT_TEXT_FN LPAREN expression RPAREN
   57 primary_expression: • lvalue
   58                   | • NUMBER_LITERAL
   59                   | • STRING_LITERAL
   60                   | • LPAREN expression RPAREN
   61                   | • READ_NUMBER_FN LPAREN RPAREN
   62                   | • SIZE_OF LPAREN IDENTIFIER RPAREN
   63 lvalue: • IDENTIFIER
   64       | • lvalue LBRACKET expression RBRACKET

    IDENTIFIER       shift, and go to state 4
    STRING_LITERAL   shift, and go to state 5
    NUMBER_LITERAL   shift, and go to state 6
    READ_NUMBER_FN   shift, and go to state 12
    PRINT_NUMBER_FN  shift, and go to state 13
    PRINT_TEXT_FN    shift, and go to state 14
    SIZE_OF          shift, and go to state 15
    MINUS            shift, and go to state 16
    SEMICOLON        shift, and go to state 43
    LPAREN           shift, and go to state 18

    expression                 go to state 44
    assignment_expression      go to state 29
    equality_expression        go to state 30
    relational_expression      go to state 31
    additive_expression        go to state 32
    multiplicative_expression  go to state 33
    unary_expression           go to state 34
    postfix_expression         go to state 35
    primary_expression         go to state 36
    lvalue                     go to state 37


State 12

   61 primary_expression: READ_NUMBER_FN • LPAREN RPAREN

    LPAREN  shift, and go to state 45


State 13

   51 postfix_expression: PRINT_NUMBER_FN • LPAREN expression RPAREN

    LPAREN  shift, and go to state 46


State 14

   52 postfix_expression: PRINT_TEXT_FN • LPAREN expression RPAREN

    LPAREN  shift, and go to state 47


State 15

   62 primary_expression: SIZE_OF • LPAREN IDENTIFIER RPAREN

    LPAREN  shift, and go to state 48


State 16

   46 unary_expression: • postfix_expression
   47                 | • MINUS unary_expression
   47                 | MINUS • unary_expression
   48 postfix_expression: • primary_expression
   49                   | • postfix_expression LBRACKET expression RBRACKET
   50                   | • postfix_expression LPAREN argument_expression_list_opt RPAREN
   51                   | • PRINT_NUMBER_FN LPAREN expression RPAREN
   52                   | • PRINT_TEXT_FN LPAREN expression RPAREN
   57 primary_expression: • lvalue
   58                   | • NUMBER_LITERAL
   59                   | • STRING_LITERAL
   60                   | • LPAREN expression RPAREN
   61                   | • READ_NUMBER_FN LPAREN RPAREN
   62                   | • SIZE_OF LPAREN IDENTIFIER RPAREN
   63 lvalue: • IDENTIFIER
   64       | • lvalue LBRACKET expression RBRACKET

    IDENTIFIER       shift, and go to state 4
    STRING_LITERAL   shift, and go to state 5
    NUMBER_LITERAL   shift, and go to state 6
    READ_NUMBER_FN   shift, and go to state 12
    PRINT_NUMBER_FN  shift, and go to state 13
    PRINT_TEXT_FN    shift, and go to state 14
    SIZE_OF          shift, and go to state 15
    MINUS            shift, and go to state 16
    LPAREN           shift, and go to state 18

    unary_expression    go to state 49
    postfix_expression  go to state 35
    primary_expression  go to state 36
    lvalue              go to state 50


State 17

   14 statement: SEMICOLON •

    $default  reduce using rule 14 (statement)


State 18

   28 expression: • assignment_expression
   29 assignment_expression: • equality_expression
   30                      | • lvalue ASSIGN assignment_expression
   31 equality_expression: • relational_expression
   32                    | • equality_expression EQUAL_EQUAL relational_expression
   33                    | • equality_expression BANG_EQUAL relational_expression
   34 relational_expression: • additive_expression
   35                      | • relational_expression LESS additive_expression
   36                      | • relational_expression GREATER additive_expression
   37                      | • relational_expression LESS_EQUAL additive_expression
   38                      | • relational_expression GREATER_EQUAL additive_expression
   39 additive_expression: • multiplicative_expression
   40                    | • additive_expression PLUS multiplicative_expression
   41                    | • additive_expression MINUS multiplicative_expression
   42 multiplicative_expression: • unary_expression
   43                          | • multiplicative_expression STAR unary_expression
   44                          | • multiplicative_expression SLASH unary_expression
   45                          | • multiplicative_expression PERCENT unary_expression
   46 unary_expression: • postfix_expression
   47                 | • MINUS unary_expression
   48 postfix_expression: • primary_expression
   49                   | • postfix_expression LBRACKET expression RBRACKET
   50                   | • postfix_expression LPAREN argument_expression_list_opt RPAREN
   51                   | • PRINT_NUMBER_FN LPAREN expression RPAREN
   52                   | • PRINT_TEXT_FN LPAREN expression RPAREN
   57 primary_expression: • lvalue
   58                   | • NUMBER_LITERAL
   59                   | • STRING_LITERAL
   60                   | • LPAREN expression RPAREN
   60                   | LPAREN • expression RPAREN
   61                   | • READ_NUMBER_FN LPAREN RPAREN
   62                   | • SIZE_OF LPAREN IDENTIFIER RPAREN
   63 lvalue: • IDENTIFIER
   64       | • lvalue LBRACKET expression RBRACKET

    IDENTIFIER       shift, and go to state 4
    STRING_LITERAL   shift, and go to state 5
    NUMBER_LITERAL   shift, and go to state 6
    READ_NUMBER_FN   shift, and go to state 12
    PRINT_NUMBER_FN  shift, and go to state 13
    PRINT_TEXT_FN    shift, and go to state 14
    SIZE_OF          shift, and go to state 15
    MINUS            shift, and go to state 16
    LPAREN           shift, and go to state 18

    expression                 go to state 51
    assignment_expression      go to state 29
    equality_expression        go to state 30
    relational_expression      go to state 31
    additive_expression        go to state 32
    multiplicative_expression  go to state 33
    unary_expression           go to state 34
    postfix_expression         go to state 35
    primary_expression         go to state 36
    lvalue                     go to state 37


State 19

    6 statement_list: ε •
    7               | • statement_list statement
   15 block_statement: LBRACE • statement_list RBRACE

    $default  reduce using rule 6 (statement_list)

    statement_list  go to state 52


State 20

    3 item_list: item_list top_level_item •

    $default  reduce using rule 3 (item_list)


State 21

    5 top_level_item: statement •

    $default  reduce using rule 5 (top_level_item)


State 22

   13 statement: block_statement •

    $default  reduce using rule 13 (statement)


State 23

    8 statement: var_declaration •

    $default  reduce using rule 8 (statement)


State 24

    9 statement: expression_statement •

    $default  reduce using rule 9 (statement)


State 25

   10 statement: if_statement •

    $default  reduce using rule 10 (statement)


State 26

   11 statement: loop_statement •

    $default  reduce using rule 11 (statement)


State 27

   12 statement: return_statement •

    $default  reduce using rule 12 (statement)


State 28

   22 expression_statement: expression • SEMICOLON

    SEMICOLON  shift, and go to state 53


State 29

   28 expression: assignment_expression •

    $default  reduce using rule 28 (expression)


State 30

   29 assignment_expression: equality_expression •  [SEMICOLON, RPAREN, RBRACKET, ',']
   32 equality_expression: equality_expression • EQUAL_EQUAL relational_expression
   33                    | equality_expression • BANG_EQUAL relational_expression

    EQUAL_EQUAL  shift, and go to state 54
    BANG_EQUAL   shift, and go to state 55

    $default  reduce using rule 29 (assignment_expression)


State 31

   31 equality_expression: relational_expression •  [SEMICOLON, EQUAL_EQUAL, BANG_EQUAL, RPAREN, RBRACKET, ',']
   35 relational_expression: relational_expression • LESS additive_expression
   36                      | relational_expression • GREATER additive_expression
   37                      | relational_expression • LESS_EQUAL additive_expression
   38                      | relational_expression • GREATER_EQUAL additive_expression

    LESS           shift, and go to state 56
    LESS_EQUAL     shift, and go to state 57
    GREATER        shift, and go to state 58
    GREATER_EQUAL  shift, and go to state 59

    $default  reduce using rule 31 (equality_expression)


State 32

   34 relational_expression: additive_expression •  [SEMICOLON, EQUAL_EQUAL, BANG_EQUAL, LESS, LESS_EQUAL, GREATER, GREATER_EQUAL, RPAREN, RBRACKET, ',']
   40 additive_expression: additive_expression • PLUS multiplicative_expression
   41                    | additive_expression • MINUS multiplicative_expression

    PLUS   shift, and go to state 60
    MINUS  shift, and go to state 61

    $default  reduce using rule 34 (relational_expression)


State 33

   39 additive_expression: multiplicative_expression •  [PLUS, MINUS, SEMICOLON, EQUAL_EQUAL, BANG_EQUAL, LESS, LESS_EQUAL, GREATER, GREATER_EQUAL, RPAREN, RBRACKET, ',']
   43 multiplicative_expression: multiplicative_expression • STAR unary_expression
   44                          | multiplicative_expression • SLASH unary_expression
   45                          | multiplicative_expression • PERCENT unary_expression

    STAR     shift, and go to state 62
    SLASH    shift, and go to state 63
    PERCENT  shift, and go to state 64

    $default  reduce using rule 39 (additive_expression)


State 34

   42 multiplicative_expression: unary_expression •

    $default  reduce using rule 42 (multiplicative_expression)


State 35

   46 unary_expression: postfix_expression •  [PLUS, MINUS, STAR, SLASH, PERCENT, SEMICOLON, EQUAL_EQUAL, BANG_EQUAL, LESS, LESS_EQUAL, GREATER, GREATER_EQUAL, RPAREN, RBRACKET, ',']
   49 postfix_expression: postfix_expression • LBRACKET expression RBRACKET
   50                   | postfix_expression • LPAREN argument_expression_list_opt RPAREN

    LPAREN    shift, and go to state 65
    LBRACKET  shift, and go to state 66

    $default  reduce using rule 46 (unary_expression)


State 36

   48 postfix_expression: primary_expression •

    $default  reduce using rule 48 (postfix_expression)


State 37

   30 assignment_expression: lvalue • ASSIGN assignment_expression
   57 primary_expression: lvalue •  [PLUS, MINUS, STAR, SLASH, PERCENT, SEMICOLON, EQUAL_EQUAL, BANG_EQUAL, LESS, LESS_EQUAL, GREATER, GREATER_EQUAL, LPAREN, RPAREN, LBRACKET, RBRACKET, ',']
   64 lvalue: lvalue • LBRACKET expression RBRACKET

    ASSIGN    shift, and go to state 67
    LBRACKET  shift, and go to state 68

    LBRACKET  [reduce using rule 57 (primary_expression)]
    $default  reduce using rule 57 (primary_expression)

    shift/reduce conflict on token LBRACKET:
       57 primary_expression: lvalue •
       64 lvalue: lvalue • LBRACKET expression RBRACKET
      Example: lvalue • LBRACKET expression RBRACKET
      Shift derivation
        postfix_expression
        ↳ 48: primary_expression
              ↳ 57: lvalue
                    ↳ 64: lvalue • LBRACKET expression RBRACKET
      Reduce derivation
        postfix_expression
        ↳ 49: postfix_expression       LBRACKET expression RBRACKET
              ↳ 48: primary_expression
                    ↳ 57: lvalue •



State 38

    4 top_level_item: function_definition •

    $default  reduce using rule 4 (top_level_item)


State 39

   16 var_declaration: LET IDENTIFIER • COLON type_specifier optional_initializer SEMICOLON

    COLON  shift, and go to state 69


State 40

   23 if_statement: IF LPAREN • expression RPAREN statement
   24             | IF LPAREN • expression RPAREN statement ELSE statement
   28 expression: • assignment_expression
   29 assignment_expression: • equality_expression
   30                      | • lvalue ASSIGN assignment_expression
   31 equality_expression: • relational_expression
   32                    | • equality_expression EQUAL_EQUAL relational_expression
   33                    | • equality_expression BANG_EQUAL relational_expression
   34 relational_expression: • additive_expression
   35                      | • relational_expression LESS additive_expression
   36                      | • relational_expression GREATER additive_expression
   37                      | • relational_expression LESS_EQUAL additive_expression
   38                      | • relational_expression GREATER_EQUAL additive_expression
   39 additive_expression: • multiplicative_expression
   40                    | • additive_expression PLUS multiplicative_expression
   41                    | • additive_expression MINUS multiplicative_expression
   42 multiplicative_expression: • unary_expression
   43                          | • multiplicative_expression STAR unary_expression
   44                          | • multiplicative_expression SLASH unary_expression
   45                          | • multiplicative_expression PERCENT unary_expression
   46 unary_expression: • postfix_expression
   47                 | • MINUS unary_expression
   48 postfix_expression: • primary_expression
   49                   | • postfix_expression LBRACKET expression RBRACKET
   50                   | • postfix_expression LPAREN argument_expression_list_opt RPAREN
   51                   | • PRINT_NUMBER_FN LPAREN expression RPAREN
   52                   | • PRINT_TEXT_FN LPAREN expression RPAREN
   57 primary_expression: • lvalue
   58                   | • NUMBER_LITERAL
   59                   | • STRING_LITERAL
   60                   | • LPAREN expression RPAREN
   61                   | • READ_NUMBER_FN LPAREN RPAREN
   62                   | • SIZE_OF LPAREN IDENTIFIER RPAREN
   63 lvalue: • IDENTIFIER
   64       | • lvalue LBRACKET expression RBRACKET
